# Heimdall

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamlfix.toml  DataDescription_CCC.ipynb  README.md  cell_representation_demo.py  demo.ipynb  main.py  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  train.py  train_demo.ipynb
.github/workflows/: lint.yml
Heimdall/: .fc.py.swp  .models.py.swp  __about__.py  cell_representations.py  datasets.py  embedding.py  f_c.py  f_g.py  fc.py  fe.py  fg.py  losses.py  models.py  order.py  reduce.py  samplers.py  tailor.py  task.py  trainer.py  utils.py
Heimdall/config/: config.yaml  global_vars.yaml
Heimdall/models/: __init__.py  (+5 more)
config/: config.yaml  global_vars.yaml
docs/: requirements.txt
gene_embeds_analysis/: embeddings_analysis.ipynb
notebooks/: data_processing_cta.ipynb  data_processing_scdrs.ipynb  data_processing_utils.py  documentation.txt  perturb_seq_norman_diff_ko_paired.ipynb  pretraining_test.ipynb  spatial-neighbor-tasks.ipynb
plotting/: Fig2.ipynb  Heimdall-fig3.ipynb  boxplots_spatial.ipynb  boxplots_tissue.ipynb  heatmaps.ipynb  spatial_generalization_figure_4.ipynb  tissue_generalization_figure_2.ipynb
scripts/: create_sweep.py  deploy_sweep.sh
sweeps/: base_sweep.yaml  fp_base_sweep.yaml  tmp.yaml
tests/: .conftest.py.swo  \  conftest.py  test_config.py  test_f_c.py  test_f_e.py  test_f_g.py  test_f_r.py  test_flash_attention.py  test_flash_attn.py  test_integration.py  test_model.py  test_task.py  test_utils.py
umaps/: spatial_umaps.ipynb  tissue_umaps.ipynb
(+479 files in other folders)
