[project]
name = "Heimdall"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["Heimdall"]

[tool.flake8]
max-line-length = 120
count = true
extend-ignore = [
    "E203",  # conflicting with black style slicing
    "D107",  # only need docstring at class level, no need at __init__
]
exclude = [
    ".nox",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.pyc",
    "*.egg-info",
    ".eggs",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
