[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Heimdall"
dynamic = ["version"]

authors = [
  { name="Remy Liu"},
  { name="Nicholas Ho"},
  { name="Shahul Alam", email="alam.shahul@gmail.com" },
]

[tool.hatch.build.targets.sdist]
include = [
  "Heimdall/*.py",
]

[tool.hatch.build.targets.wheel]
include = [
  "Heimdall/*.py",
]

[tool.hatch.version]
path = "Heimdall/__about__.py"

[tool.flake8]
max-line-length = 120
count = true
extend-ignore = [
    "E203",  # conflicting with black style slicing
    "D107",  # only need docstring at class level, no need at __init__
]
exclude = [
    ".nox",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.pyc",
    "*.egg-info",
    ".eggs",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
line_length = 120
